--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "snackify",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "./server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "build": "webpack && npm start",
+    "start": "node ./server/server.js",
+    "build": "webpack -w && npm start",
     "start:dev": "webpack-dev-server --hot"
   },
   "repository": {
